<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!--    rename and change value of Next button to Random for Task 6 Step 8-->
    <string name="random_button_next">Random</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
<!--        changed to 0 for Task 7 Step 4-->
        0
        <!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
        <!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
        <!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
        <!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
        <!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
        <!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
        <!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
        <!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
        <!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
        <!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
        <!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
        <!--        bibendum, vel congue leo egestas.\n\n-->
        <!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
        <!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
        <!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
        <!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
        <!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
        <!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
        <!--        est.\n\n-->
        <!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
        <!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
        <!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
        <!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
        <!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
        <!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
        <!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
        <!--        convallis.\n\n-->
        <!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
        <!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
        <!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
        <!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
        <!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
        <!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
        <!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
    </string>

    <!--    extract string resource, rename button2, and set value to Toast for Task 6 Step 7-->
    <string name="toast_button_text">Toast</string>

    <!--    extract string resource, rename button3, and set value to Count for Task 6 Step 10-->
    <string name="count_button_text">Count</string>

    <!--    extract string resource, set to display message for Task 9 Step 2-->
    <string name="random_heading">
        Here is a random number between 0 and %d.
    </string>

    <!--    extract string resource, set value to R for Task 9 Step 1-->
    <string name="textview_random">R</string>
    <string name="acorn">acorn</string>
    <string name="fox">fox</string>
    <string name="loginbutton">loginbutton</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_password">Create Password (6 chars)</string>
    <string name="game_score">gamescore</string>
    <string name="player_name">playername</string>
    <string name="rank_number">ranknumber</string>
    <string name="login_button">loginbutton</string>
    <string name="create_account_button">createaccountbutton</string>
</resources>

<!--<resources>-->
<!--    <string name="app_name">My Application</string>-->
<!--    <string name="action_settings">Settings</string>-->
<!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

<!--    <string name="lorem_ipsum">-->
<!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
<!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
<!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
<!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
<!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
<!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
<!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
<!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
<!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
<!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
<!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
<!--        bibendum, vel congue leo egestas.\n\n-->
<!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
<!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
<!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
<!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
<!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
<!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
<!--        est.\n\n-->
<!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
<!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
<!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
<!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
<!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
<!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
<!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
<!--        convallis.\n\n-->
<!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
<!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
<!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
<!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
<!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
<!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
<!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
<!--    </string>-->
<!--</resources>-->