<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackground"
        android:padding="16dp">

        <!--            changed the font, text, and layout for Task 7 Step 4-->

        <!--        created toast button for Task 6 Step 1-7-->
        <!--        edited the toast button for Task 7 Step 2-3-->
        <TextView
            android:id="@+id/textview_first"
            android:layout_width="55dp"
            android:layout_height="84dp"
            android:fontFamily="sans-serif"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/white"
            android:textSize="72sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/toast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/buttonBackground"
            android:text="@string/toast_button_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/count_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />


        <!--        created count button for Task 6 Step 9-->
        <!--        edited the count button for Task 6 Step 2-->
        <Button
            android:id="@+id/count_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/buttonBackground"
            android:text="@string/count_button_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/random_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toast_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <!--        edited the random button for Task 6 Step 2-3-->
        <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/buttonBackground"
            android:text="@string/random_button_next"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/count_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".FirstFragment">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:padding="16dp">-->

<!--        <Button-->
<!--            android:id="@+id/button_first"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/next"-->
<!--            app:layout_constraintBottom_toTopOf="@id/textview_first"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/textview_first"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/lorem_ipsum"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/button_first" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--</androidx.core.widget.NestedScrollView>-->